# distributed-job-scheduler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  k8s-diagnostics.yml  registry-maintenance.yml
alembic/: env.py
alembic/versions/: 20260622_000001_create_jobs_table.py
app/: __init__.py  schemas.py
app/api/: main.py
app/core/: config.py
app/db/: models.py  repository.py  session.py
app/queue/: __init__.py  base.py  database.py  memory.py  redis.py
app/worker/: handlers.py  main.py  runtime.py
deploy/k8s/: api.yaml  hpa.yaml  migration.yaml  valkey.yaml  worker.yaml
deploy/terraform/: main.tf  minimal.tfvars.example
deploy/terraform-minimal/: .terraform.lock.hcl  main.tf
docs/: agent-operating-model.md  architecture.md  cost-conscious-architecture.md  deployment-runbook.md  roadmap.md
docs/adr/: 0001-database-backed-queue.md  0002-worker-leases.md  0003-at-least-once-retries-dead-letter.md  0004-digitalocean-deployment.md
tests/: conftest.py  test_api.py  test_queue.py  test_worker.py
